tests/baselines/reference/circularModuleImports.errors.txt
==== tests/cases/compiler/circularModuleImports.ts (1 errors) ====
    module M
     
    {
     
        import A = B;
        ~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'A'.
     
        import B = A;
     
    }
    